intel/bench_214/extr_.micropythondriverscc3000srcsecurity.c_expandKey_with_main/log.txt
bench_214/extr_.micropythondriverscc3000srcsecurity.c_expandKey_with_main/extr_.micropythondriverscc3000srcsecurity.c_expandKey_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
